sass/abstracts/_mixins.scss
// -----------------------------------------------------------------------------
// This file contains all application-wide Sass mixins.
// -----------------------------------------------------------------------------
@use "../abstracts/variables" as *;
@use "../base/typography" as *;
@use "sass:map";

@mixin breakpoint($bp) {
  @if $bp == tablet {
    @media (min-width: $bp-tablet) {
      @content;
    }
  }

  @if $bp == tablethorizontal {
    @media (min-width: $bp-tablet-horizontal) {
      @content;
    }
  }

  @if $bp == desktop {
    @media (min-width: $bp-desktop) {
      @content;
    }
  }

  @if $bp == desktopxl {
    @media (min-width: $bp-desktop-xl) {
      @content;
    }
  }
}

@mixin text-style($style) {
  @if map.has-key($typography-scale, $style) {
    $config: map.get($typography-scale, $style);

    font-family: map.get($config, font-family);
    font-size: map.get($config, font-size);
    line-height: map.get($config, line-height);
    font-weight: map.get($config, font-weight);
    text-transform: map.get($config, text-transform);
  } @else {
    @error "El estilo '#{$style}' no existe en typography-scale";
  }
}

/* Example for use
h1 {
  @include text-style("heading-xl");
}

.card-title {
  @include text-style("heading-l");
}
*/


@mixin button(){
  display: inline-flex;
  width:auto;
  cursor: pointer;

  &__text {
    font-size: 20px;
    background-color: $black;
    color: $white;
    padding: 24px 32px;
    transition: all .5s ease;
  }

  &__arrow {
    background-color: $gold;
    color: $white;
    padding: 24px;
    font-size: 20px;
    transition: all .5s ease;
    img {
      vertical-align: middle;
      display:block;
    }
  }

  // Solo aplicar hover en desktop
  @media (hover: hover){
    &:hover &__text {
      background-color: $gold;
    }
    &:hover &__arrow {
      background-color: $black;
    }
  }

// Feedback táctil en mobile
  &:active {
    transform: scale(0.98);

    .button__text {
      background-color: $gold;
      transition: none;
    }
    .button__arrow {
      background-color: $black;
      transition: none;
    }
  }
}

// Ocultar el <br> en resoluciones mayores a 600px
@media (min-width: 601px) {
  br.mobile {
    display: none;
  }
}

